--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "dontpad",
-  "name": "Advanced Dontpad",
+  "short_name": "textpub",
+  "name": "Advanced Textpub",
   "icons": [
     {
       "src": "favicon.ico",
